--- a/chehly_taobao_vk_ready.yml
+++ b/chehly_taobao_vk_ready.yml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<yml_catalog date="2025-07-04 18:30">
+<yml_catalog date="2025-07-04 18:20">
   <shop>
-    <name>COAS - Магазин Оригинальной Одежды и Обуви</name>
+    <name>EXTENDO SHOP - Доступные Бренды</name>
     <company>Физическое лицо</company>
     <currencies>
       <currency id="RUB" rate="1"/>
